[workspace]
members = [
    "remotefs-common",
    "remotefs-client", 
    "remotefs-agent",
    "remotefs-relay"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RemoteFS Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/remotefs"
rust-version = "1.70"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
url = "2.5"

# Encryption
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"
argon2 = "0.5"

# Compression
lz4_flex = "0.11"

# File system
fuse3 = "0.7"
libc = "0.2"

# Configuration
toml = "0.8"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
bytes = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
num_cpus = "1.16"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
async-trait = "0.1"
dashmap = "5.5"

# Testing utilities
tempfile = "3.8"
env_logger = "0.10"


# Profile configurations
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
