[package]
name = "remotefs-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "remotefs_client"
path = "src/lib.rs"

[[bin]]
name = "remotefs-client"
path = "src/main.rs"

[dependencies]
# Local dependencies
remotefs-common = { path = "../remotefs-common" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# FUSE filesystem (will be added when implemented)
# fuse3 = { workspace = true }
libc = { workspace = true }

# Networking
tokio-tungstenite = { workspace = true }
url = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Configuration
config = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
bytes = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
