[package]
name = "remotefs-fuse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "remotefs-mount"
path = "src/main.rs"

[lib]
name = "remotefs_fuse"
path = "src/lib.rs"

[dependencies]
# Local dependencies
remotefs-common = { path = "../remotefs-common" }
remotefs-client = { path = "../remotefs-client" }

# FUSE
fuse3 = { workspace = true }

# Async
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
config = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
bytes = { workspace = true }
uuid = { workspace = true }

# Time handling
chrono = { workspace = true }

# File system operations
libc = { workspace = true }

[features]
default = []

[dev-dependencies]
tempfile = { workspace = true }
